# nuxt-fastapi-boilerplate

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  local.Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ca905114b37d_add_fake_data.py  f013ae44ffb7_init.py
backend/scripts/: format.sh  lint.sh
backend/src/: main.py
backend/src/api/: deps.py  router.py
backend/src/api/endpoints/: todos.py
backend/src/core/: config.py
backend/src/crud/: __init__.py  base.py
backend/src/models/: base.py  todos.py
backend/src/schemas/: base.py  todos.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_todos.py
backend/tests/utils/: todos.py
frontend/: .dockerignore  .npmrc  Dockerfile  README.md  i18n.config.ts  local.Dockerfile  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.js
frontend/assets/css/: tailwind.css
frontend/components/: LanguagePicker.vue  NavBar.vue  TodoBoard.vue  TodoCard.vue  TodoForm.vue
frontend/components/base/: Button.vue  Dropdown.vue  Input.vue  LinearProgress.vue  Modal.vue  SlideToggle.vue  TextArea.vue
frontend/composables/: useBaseURLFetch.ts
frontend/interfaces/: page.interface.ts  todo.interface.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/plugins/: click-outside-directive.ts  tw-merge-directive.ts
frontend/stores/: todos.ts
frontend/tests/: TodoBoard.spec.ts
