[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eliott BENOIT <eliott.benoit@gomindfactory.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.103.2", extras = ["all"]}
alembic = "^1.12.0"
psycopg2 = "^2.9.9"
Faker = "^19.6.2"
SQLAlchemy = "^2.0.21"
pydantic-settings = "^2.0.3"
black = "^23.9.1"

[tool.poetry.dev-dependencies]
ruff = "^0.0.292"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-env = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '(\.venv|venv|\.git|__pycache__|\.mypy_cache|\.pytest_cache)'

[tool.ruff]
line-length = 99
exclude = [".venv","venv",".git","__pycache__",".mypy_cache",".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
  "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
env = ["ENV=test", "SQLALCHEMY_DATABASE_URI=postgresql://postgres:postgres@127.0.0.1:5432/db_test"]
